Added master Tokenlogic closes 45
